2009-02-26 Support image clipping in pdf backend. - JKS

2009-02-25 Improve tick location subset choice in FixedLocator. - EF

2009-02-24 Deprecate numerix, and strip out all but the numpy
           part of the code. - EF

2009-02-21 Improve scatter argument handling; add an early error
           message, allow inputs to have more than one dimension. - EF

2009-02-16 Move plot_directive.py to the installed source tree.  Add
           support for inline code content - MGD

2009-02-16 Move mathmpl.py to the installed source tree so it is
           available to other projects. - MGD

2009-02-14 Added the legend title support - JJL

2009-02-10 Fixed a bug in backend_pdf so it doesn't break when the setting
           pdf.use14corefonts=True is used. Added test case in
           unit/test_pdf_use14corefonts.py. - NGR

2009-02-08 Added a new imsave function to image.py and exposed it in
           the pyplot interface - GR

2009-02-04 Some reorgnization of the legend code. anchored_text.py
           added as an example. - JJL

2009-02-04 Add extent keyword arg to hexbin - ADS

2009-02-04 Fix bug in mathtext related to \dots and \ldots - MGD

2009-02-03 Change default joinstyle to round - MGD

2009-02-02 Reduce number of marker XObjects in pdf output - JKS

2009-02-02 Change default resolution on polar plot to 1 - MGD

2009-02-02 Avoid malloc errors in ttconv for fonts that don't have
           e.g. PostName (a version of Tahoma triggered this) - JKS

2009-01-30 Remove support for pyExcelerator in exceltools -- use xlwt
           instead - JDH

2009-01-29 Document 'resolution' kwarg for polar plots.  Support it
           when using pyplot.polar, not just Figure.add_axes. - MGD

2009-01-29 Rework the nan-handling/clipping/quantizing/simplification
           framework so each is an independent part of a pipeline.
           Expose the C++-implementation of all of this so it can be
           used from all Python backends.  Add rcParam